# TinyRefinementModel

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GPU-vs-TPU.md  README.md  ablation_harness.py  ablation_results.md  anime.py  attention.py  auxmd.md  checkpoint_utils.py  config.py  data_loaders.py  grad_step.py  infer_local.py  inference_core.py  inspect_data.py  inspection_results.txt  layers.py  losses.py  main.py  metrics_logger.py  model.py  monitor.py  new_train_local.py  optimizers.py  plan_a_model.py  plan_a_trainer.py  plot_history.py  prefill.py  pyproject.toml  requirements.txt  roadmap.md  rope.py  run_tracker.py  schedulers.py  schedules.py  scratchpad_harness.py  start_training.py  (+14 more)
.github/: pull_request_template.md
data/: physics_data.npy  procedural_gen.py
docs/: AUTONOMY.md  CHANGES.md  PERFORMANCE_PLAN.md  PLAN.md  REFACTOR_PLAN.md  ROADMAP.md
model/: __init__.py  layers.py  muon.py  refiner.py
scripts/: setup_tpu.sh
src/: train_local.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_ablation_harness.py  test_arch_guard.py  test_attention_numerics.py  test_batching_invariants.py  test_checkpoint_roundtrip.py  test_chunked_attention.py  test_chunked_ce.py  test_data_determinism.py  test_data_hygiene.py  test_data_mixer.py  test_golden_run.py  test_grad_zero_frac.py  test_grad_zero_fraction.py  test_init_loss.py  test_logit_telemetry.py  test_loss_wiring.py  test_mask_bias_finite.py  test_milestone_report.py  test_model_invariants.py  test_nan.py  test_plan_a.py  test_plan_a_integration.py  (+10 more)
(+77 files in other folders)
